# intentional-architecture-python

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
src/interface/api/: bootstrap.py  main.py  request_types.py  router.py  server.py
src/module/auction/application/: command.py  command_handler.py  event_handler.py  query.py  query_handler.py  read_repository.py  unit_of_work.py  write_repository.py
src/module/auction/domain/: entity.py  event.py  exception.py  value_object.py
src/module/auction/infrastructure/: sqlite_auction_read_repository.py  sqlite_auction_unit_of_work.py  sqlite_auction_write_repository.py
src/module/auction/interface/api/: auction_controller.py  bid_controller.py
src/shared/application/: command.py  command_bus.py  event_bus.py  query.py  query_bus.py  unit_of_work.py
src/shared/domain/: event.py
tests/e2e/: Create Auction.yml  Get Auction.yml  Get Auctions.yml  Get Root.yml  List Bids.yml  Place Bid.yml  README.md
tests/module/auction/application/: test_query_handler.py
tests/module/auction/domain/: test_value_object.py
tests/module/auction/infrastructure/: test_read_repository.py  test_write_repository.py
tests/module/auction/interface/api/: test_bid_controller.py
tests/unit/module/auction/application/: test_command_handler.py
tests/unit/module/auction/domain/: test_entity.py
tests/unit/module/auction/infrastructure/: test_unit_of_work.py
tests/unit/module/auction/interface/api/: test_auction_controller.py
